--- a/CounterClick/index.html
+++ b/CounterClick/index.html
@@ -3,7 +3,7 @@
 <head>
     
     <title>Click Count</title>
-    <link rel="stylesheet" href="scripts.js">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="box"></div>
