--- a/CounterClick/toggleMode/index.html
+++ b/CounterClick/toggleMode/index.html
@@ -11,7 +11,7 @@
 
         </div>
     </div>
-    <h1 id="click">Click On The Toggle Button</h1>
+    <h1 id="text">Click On The Toggle Button</h1>
 
     <script src="script.js"></script>
 </body>
