learned about promises

--- a/DomManipulations&events/AsynJSAJAx&FetchAPi/Promises/promises.html
+++ b/DomManipulations&events/AsynJSAJAx&FetchAPi/Promises/promises.html
@@ -4,6 +4,6 @@
 </head>
 <body>
     <script src='jquery-3.4.1.js'></script>
-    <script src='promises.js'></script>
+    <script src='promises2.js'></script>
 </body>
 </html>
